# Actuator-Package

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  INSTALL.md  LICENSE  README.md  SmartChecklistForJiraMergeTicket.txt  TestingTemplate.txt  actpack_builder.sh  build.sh  demos.yaml  install_hooks.sh  install_python_deps.sh  noxfile.py  plan_definitions.cmake  pyproject.toml  recompile.py  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: codeql-analysis.yml  docs.yml  main.yml  nox.yml  pre-commit.yml  pypi-publish.yml  release.yml
C/: CMAKE_RASPBERRY_PI_TOOLCHAIN_FILE  CMakeLists.txt  com_template.txt  cppFlexSEA.cpp  cppFlexSEA.h  cscripts_builder.sh  cscripts_builder_unix.sh  csripts_builder.sh  current_control.cpp  findpolesexample.cpp  findpolesexample.h  hold_position_example.cpp  install_build_deps.sh  leaderfollower.cpp  main.cpp  open_speed_example.cpp  protobuf_test.cpp  readOnly.cpp  readOnly.h  read_all_example.cpp  read_all_example.h  two_dev_position_example.cpp  two_dev_position_example.h  utils.h
C/inc/: current_control.h  fxUtil.h  hold_position_example.h  leaderfollower.h  open_speed_example.h  readonly.h
C/src/: communication_tester.cpp  current_control.cpp  findpolesexample.cpp  fxUtil.cpp  hold_position_example.cpp  leaderfollower.cpp  open_speed_example.cpp  readonly.cpp  two_dev_position_example.cpp
Firmware/2018-01-25/: manage_v02_20180125.hex
Firmware/2018-03-29/: fx-rigid-ex_ActPack_HW01.hex  fx-rigid-re-HW01-27V-10A-15A-1s.hex  fx-rigid-re-HW01-30V-10A-15A-1s.hex  fx-rigid-re-HW02-30V-10A-15A-1s.hex  manage_ActPack_HW01.hex  manage_ActPack_HW02.hex
Firmware/2019-09-13/: fx-mn-20190913-HW02-ActPack.hex  fx-mn-20190913-HW10-ActPack.hex  fx-rigid-ex-20190828-HW02.hex  fx-rigid-ex-20190828-HW10.hex  fx-rigid-re-20190830-HW02.hex  (+1 more)
MATLAB/: README.md  RunLeaderFollower.m  com.txt  flexsea_demo.m  printDevice.m  readConfig.m  readDeviceVar.m  runCurrentControl.m  runOpenControl.m  runPositionControl.m  runReadOnly.m  runTwoDevicePosition.m
MATLAB_scripts/: README.md  flexsea_demo.m  readConfig.m  runPositionControl.m  runTwoDevicePosition.m
Python/: FlexSEA_Demo_CurrentControl.py  FlexSEA_Demo_Impedance.py  FlexSEA_Demo_Linux.py  FlexSEA_Demo_OpenSpeed.py  FlexSEA_Demo_PositionControl.py  FlexSEA_Demo_ReadOnly.py  FlexSEA_Demo_TwoPositionControl.py  FlexSEA_Example_FP-TPC1.py  FlexSEA_Example_Findpoles.py  FlexSEA_Example_Pocket_1.py  FlexSEA_Example_Pocket_CSV_1.py  FlexSEA_Example_UserRW.py  README.html  README.md  README.txt  com.txt  findPorts.py  function_test.py  fxMain.py  fxStructsValidatePy-C.py  fxUtil.py  py-c-files.config  pyFlexSEA.py  pyFlexSEA_def.py  pyTest.py  requirements.txt  script.py
Python Code/: .project  FlexSEA_Demo_CurrentControl.py  FlexSEA_Demo_Impedance.py  FlexSEA_Demo_Linux.py  FlexSEA_Demo_OpenSpeed.py  FlexSEA_Demo_ReadOnly.py  FlexSEA_Demo_TwoPositionControl.py  FlexSEA_Demo_UserDefined.py  README.html  findPorts.py  pyFlexSEA.py
Python/flexsea_demo/: README.md  bootloader.py  current_control.py  currentcontrol.py  high_speed_test.py  high_stress_test.py  impedance_control.py  impedancecontrol.py  open_control.py  opencontrol.py  ports.yaml  position_control.py  positioncontrol.py  pyproject.toml  read_only.py  readonly.py  run_demos.py  sample_params.yaml  two_devices_leader_follower.py  two_devices_leaderfollower.py  two_devices_position_control.py  two_devices_positioncontrol.py  two_position_control.py  twopositioncontrol.py  userRW.py  user_rw.py  version.py  version_number.py
Python/flexsea_demo/flexsea_demos/: __init__.py  app.py  device.py  main.py  utils.py
Python/flexsea_demo/flexsea_demos/commands/: bootloader.py  current_control.py  find_poles.py  get_version.py  high_speed.py  high_stress.py  impedance_control.py  leader_follower.py  open_control.py  position_control.py  read_only.py  two_dev_pos_control.py  two_position_control.py
Python/old/: test0.py  (+11 more)
Python_deprecated/: FlexSEA_Demo_Impedance.py  FlexSEA_Demo_OpenSpeed.py  FlexSEA_Demo_PositionControl.py  FlexSEA_Demo_ReadOnly.py  FlexSEA_Demo_TwoPositionControl.py  FlexSEA_Demo_UserDefined.py  FlexSEA_Example_FP-TPC1.py  FlexSEA_Example_Findpoles.py  FlexSEA_Example_Pocket_1.py  FlexSEA_Example_UserRW.py  pyFlexSEA.py  pyFlexSEA_def.py
SIMULINK/: README.md
Simulink/: README.md
Tools/: startup_email.py
acpac_cscripts/: CMakeLists.txt  current_control.cpp  leaderfollower.cpp  open_speed_example.cpp
demos/: app.py  demo1.py  demo1_open_control.py  demo2.py  demo2_two_pos_control.py  demo3.py  demo3_current_control.py  demo4.py  demo4_impedance_control.py  demo5.py  demo5_lsl_streaming.py  demo6.py  main.py  utilities.py
docs/: Makefile  api.md  doxyfile.in  footer.html  install.md  linux.md  pi.md  quickstart.md  requirements.txt  style.css  windows.md
flexsea/: __init__.py  config.py  current_device.py  dephy_device.py  device.py  enums.py  firmware.py  fx_enums.py  fx_plotting.py  fx_utils.py  legacy_device.py  utilities.py
inc/: ActPackPlus_device_spec.h  ActPackState.h  ActPack_device_spec.c  ActPack_device_spec.h  BMS_device_spec.h  BattCycler_device_spec.h  CellScreener_device_spec.h  CycleExo_device_spec.h  CycleTester_device_spec.h  EB5x_device_spec.h  EB603_device_spec.h  EB604_device_spec.h  EB60_device_spec.h  ExoState.h  Exo_device_spec.h  Habsolute_device_spec.h  MD10_device_spec.h  MD11_device_spec.h  MD12_device_spec.h  MD20_device_spec.h  MD30_device_spec.h  MD31_device_spec.h  NetMaster_device_spec.h  NetNode_device_spec.h  NewBoo_device_spec.h  OPORP_device_spec.h  RobotTrouser_device_spec.h  SCCD_device_spec.h  XC00s_device_spec.h  XC00t_device_spec.h  actpack_struct.h  actpackplus_struct.h  battcycler_struct.h  bms_struct.h  cellscreener_struct.h  cycleexo_struct.h  cycletester_struct.h  device_wrapper.h  eb5x_struct.h  eb603_struct.h  (+23 more)
matlab/: com.txt  flexsea_demo.m  runReadOnly.m
tests/: test_current_control.py  test_high_speed.py  test_high_stress.py  test_impedance_control.py  test_open_control.py  test_two_position_control.py  utils.py
(+332 files in other folders)
