[tool.poetry]
name = "flexsea"
version = "11.0.8"
description = ""
authors = ["Jared <jcoughlin@dephy.com>"]
readme = "README.md"
homepage = "https://github.com/DephyInc/Actuator-Package"

[tool.poetry.dependencies]
python = "^3.11"
semantic-version = "^2.10.0"
boto3 = "^1.26.110"
pyyaml = "^6.0"
pendulum = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.0"
pylint = "^2.17.2"
pre-commit = "^3.2.2"
nox = "^2022.11.21"
pandas = "^2.0.0"
seaborn = "^0.12.2"
numpy = "^1.24.2"
mypy = "^1.2.0"
ipython = "^8.12.0"
sphinx = "^7.0.1"
pydata-sphinx-theme = "^0.13.3"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "invalid-name",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-few-public-methods",
  "too-many-locals",
  "too-many-statements",
  "too-many-lines",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.nox
  | \.venv
  | build
  | dist
)/
'''
