[tool.poetry]
name = "flexsea"
version = "12.1.0"
description = ""
authors = ["Jared <jcoughlin@dephy.com>"]
readme = "README.md"
homepage = "https://github.com/DephyInc/Actuator-Package"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
semantic-version = "^2.10.0"
boto3 = "^1.26.110"
pyyaml = "^6.0"
pendulum = [
    {version = "^2.1.2", python = "<3.12"},
    {version = "^3.0.0", python = ">=3.12"}
]
pyudev = {version = "^0.24.1", platform = "linux"}


[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
pytest = "^7.3.0"
pylint = "^2.17.2"
pre-commit = "^3.2.2"
nox = "^2022.11.21"
pandas = "^2.0.0"
seaborn = "^0.12.2"
numpy = "^1.24.2"
mypy = "^1.2.0"
ipython = "^8.12.0"
sphinx = "^7.0.1"
pydata-sphinx-theme = "^0.13.3"
sphinx-copybutton = "^0.5.2"
pylsl = "^1.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "invalid-name",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-few-public-methods",
  "too-many-locals",
  "too-many-statements",
  "too-many-lines",
]


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.nox
  | \.venv
  | build
  | dist
)/
'''
