[tool.poetry]
name = "flexsea_demos"
version = "0.1.0"
description = ""
authors = ["Jared Coughlin <jcoughl3@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
flexsea = "^7.2.3"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flexsea_demos = 'flexsea_demos.main:main'
